infrastructure/kubernetes/apps/users-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: users-service
  namespace: mrun-apps

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: users-service

  template:

    metadata:
      labels:
        app: users-service
    spec:

      serviceAccountName: users-service

      securityContext:
        fsGroup: 1000

      containers:

        - name: users-service

          image: mrun/users-service

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:

            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

#          startupProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 5
#            failureThreshold: 30
#
#          readinessProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 5
#
#          livenessProbe:
#
#            httpGet:
#              path: /health
#              port: 3000
#
#            periodSeconds: 10
