infrastructure/kubernetes/apps/users-service/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: users-service

spec:
  selector:
    app: users-service

  ports:
    - name: http
      port: 3000
      targetPort: 3001

  type: ClusterIP
